--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "startback": "nodemon backend/server.ts",
     "start": "concurrently \" npm run startback\" \" npm run startfront\" ",
     "production": "concurrently \" npm run startback\" \" serve -l 3002 -s build\" ",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest"
   },
   "proxy": "",
   "keywords": [],
@@ -21,10 +22,12 @@
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
+    "supertest": "^7.0.0",
     "typescript": "^5.3.3",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "1": "^0.1.2",
     "@babel/core": "^7.23.9",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/react": "^14.1.2",
@@ -35,12 +38,17 @@
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "concurrently": "^8.2.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jest": "^27.5.1",
+    "mongodb": "^6.5.0",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.0.3",
     "postcss-cli": "^11.0.0",
+    "querystring": "^0.2.1",
     "react": "^18.3.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
@@ -67,6 +75,12 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
     ]
   }
 }
